# venus

./: .env.template  README.md  docker-compose-dev.yml  docker-compose.yml
venus/: pyproject.toml
venus/src/db/: schema.py
venus/src/library_read/: album_model.py  disc_model.py  track_model.py
venus/src/metadata/: extract_metadata.py  metadata_model.py  parse_track_number.py  parse_track_year.py
venus/src/scanning/scans/: scan_model.py
venus/src/scanning/scans/tracks_import_job/: tracks_import_errors.py  tracks_import_job.py
venus/src/scanning/track_import/: import_track.py
web/: .prettierrc  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  proxy.ts
web/apis/: client-setup.ts  db.ts
web/apis/prisma/: browser.ts  client.ts  commonInputTypes.ts  enums.ts  models.ts
web/apis/venus/: client.gen.ts  sdk.gen.ts  types.gen.ts
web/app/: cva.config.ts  env.ts  layout.tsx  page.tsx  providers.tsx  venus-error-mapper.ts  venus-fetch-tags.ts
web/app/action/: action-error-message.tsx  action.ts  default-action-error-components.tsx  fetch-action.ts  full-action-error-component.tsx  use-action.ts
web/app/albums/: page.tsx
web/app/artists/: page.tsx
web/app/auth/: action-guards.ts  admin-page.tsx  auth.ts  cookies.ts  count-users.ts  db.ts  password.ts  refresh.ts  tokens.ts
web/app/components/: artists-list.tsx  checkbox.tsx  scroll-area.tsx  skeleton.tsx
web/app/directory-browser/: directory-browser.tsx  fetch-subdirectories.ts
web/app/header/: app-picker.tsx  header-context.tsx  header-links.tsx  (+1 more)
(+186 files in other folders)
